# MetalRT

./: .gitignore  Application.cpp  Application.hpp  BVH.cpp  BVH.hpp  BVH_temp.cpp  BVH_temp.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Config.hpp  Math.hpp  Mesh.cpp  Mesh.hpp  Primitive.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  SceneData.cpp  SceneData.hpp  SceneManager.cpp  SceneManager.hpp  TLAS.cpp  TLAS.hpp  Timer.cpp  Timer.hpp  main.cpp  sdl_metal.cpp
